--- a/material_plot.ipynb
+++ b/material_plot.ipynb
@@ -1041,7 +1041,8 @@
     "max_point = data[data[\"Quantity\"] == data[\"Quantity\"].max()]\n",
     "fig.add_annotation(x=max_point[\"Date\"].values[0], y= max_point[\"Quantity\"].values[0], text=\"Maximum\", showarrow =True, arrowhead= 1)\n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "plt.show()"
    ]
   },
   {
@@ -3330,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3462,6 +3463,32 @@
          },
          "tracegroupgap": 0
         },
+        "shapes": [
+         {
+          "line": {
+           "color": "Red",
+           "dash": "dash",
+           "width": 2
+          },
+          "type": "line",
+          "x0": 3.6,
+          "x1": 3.6,
+          "y0": 0,
+          "y1": 30
+         },
+         {
+          "line": {
+           "color": "Blue",
+           "dash": "dash",
+           "width": 2
+          },
+          "type": "line",
+          "x0": 0,
+          "x1": 7,
+          "y0": 14.8,
+          "y1": 14.8
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -4326,7 +4353,8 @@
     "\n",
     "fig.update_layout(hovermode=\"closest\", template=\"plotly_dark\")\n",
     "\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "plt.show()\n"
    ]
   }
  ],
