--- a/material_plot.ipynb
+++ b/material_plot.ipynb
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3331,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3464,6 +3464,30 @@
          "tracegroupgap": 0
         },
         "shapes": [
+         {
+          "line": {
+           "color": "Red",
+           "dash": "dash",
+           "width": 2
+          },
+          "type": "line",
+          "x0": 3.6,
+          "x1": 3.6,
+          "y0": 0,
+          "y1": 30
+         },
+         {
+          "line": {
+           "color": "Blue",
+           "dash": "dash",
+           "width": 2
+          },
+          "type": "line",
+          "x0": 0,
+          "x1": 7,
+          "y0": 14.8,
+          "y1": 14.8
+         },
          {
           "line": {
            "color": "Red",
