--- a/eric_class3.ipynb
+++ b/eric_class3.ipynb
@@ -183,24 +183,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# what is an the purpose of the encoder?\n",
+    "Q. what is an the purpose of the encoder?\n",
     "\n",
-    "# the encoder part of an autoencoder learns to compress the input into a smaller encoding\n",
-    "# this encoding reduced representation of the input but captures its salient features.essentially\n",
-    "# the encoder transforms the input into a latent space representation. it learns to preserve only the aspects\n",
-    "# of the data that are most important for reconstructing it\n",
+    "A. the encoder part of an autoencoder learns to compress the input into a smaller encoding\n",
+    " this encoding reduced representation of the input but captures its salient features.essentially\n",
+    " the encoder transforms the input into a latent space representation. it learns to preserve only the aspects\n",
+    " of the data that are most important for reconstructing it\n",
     "\n",
-    "# what is the purpose of the decoder?\n",
+    "Q. what is the purpose of the decoder?\n",
     "\n",
-    "# the decoder takes the encoding provided by the encoder and attempts to recreate the original input using\n",
-    "# this reduced representation. the goal of the decoder is to reverse the process of the encoder, reconstructing\n",
-    "# the input data as accurately as possible from the compressed code\n",
+    "A. the decoder takes the encoding provided by the encoder and attempts to recreate the original input using\n",
+    " this reduced representation. the goal of the decoder is to reverse the process of the encoder, reconstructing\n",
+    " the input data as accurately as possible from the compressed code\n",
     "\n",
     "\n",
-    "# what type of loss are we using and what does it do?\n",
+    "Q. what type of loss are we using and what does it do?\n",
     "\n",
-    "# autoencoders typically use a reconstruction loss to train the network, which measures how well the decoders\n",
-    "# output matches the original input. the common types "
+    "A. autoencoders typically use a reconstruction loss to train the network, which measures how well the decoders\n",
+    " output matches the original input. the common types "
    ]
   },
   {
