--- a/eric_class3.ipynb
+++ b/eric_class3.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Task 1\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -120,6 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Task 2\n",
+    "\n",
     "class Autoencoder(Model):\n",
     "  def __init__(self, latent_dim, shape):\n",
     "    super(Autoencoder, self).__init__()\n",
@@ -396,6 +400,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Task 3\n",
+    "\n",
     "# visualization latent space dim=2\n"
    ]
   },
@@ -543,6 +549,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Task 4\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
