--- a/eric_class3.ipynb
+++ b/eric_class3.ipynb
@@ -204,7 +204,11 @@
     "Q. what type of loss are we using and what does it do?\n",
     "\n",
     "A. autoencoders typically use a reconstruction loss to train the network, which measures how well the decoders\n",
-    " output matches the original input. the common types "
+    " output matches the original input. the common types \n",
+    "\n",
+    "Q. What is the role of the latent space and why does it lead to different results in the visualizations?\n",
+    "\n",
+    "A. the latent space in an autoencoder is the intermediate representation of the input data that the encoder compresses it into. it serves as a sort of bottleneck in the network, containing all the compressed information that the decoder will then use to reconstruct the original input. "
    ]
   },
   {
